# cppStudy

./: CM  CMakeLists.txt  Makefile  hw.c  hw.cpp  kservo.cpp
abacus/: Makefile  nextsoroban.cpp  soroban.cpp  soroban.hpp  sorobanclass.cpp  sorobanconsole.cpp  sorobanframe.hpp  sorobanlib.cpp
cuda/: face_detect.cpp  hfd.cu  matadd.cu  matmul.cu  timer.h  webcamera.cpp
dd/: Makefile  mymod.c
hello_world/: hw.c  hw.cpp  hw.rs
kekka/: gauss-order.csv  kekka.out.csv
math/: collatz.rs  fd.cpp  ffer.cpp  fizzbuzz.rs  gauss.c  kekka.c  kekka.csv  ncthalf.hpp  perceptron.cpp  webcam.cpp
pantilt/: motion.cpp  motion.hpp  pantilt.cpp  pantilt4axis.cpp  webcam.cpp
run_commands/: CM  vimrc
serial/: hb.c  ics_servo_rom.cpp  joycon.c  joynics.cpp  joynics2.cpp  kservo.c  kservo.cpp  kservo.sh  pantilt.cpp  raspicam.cpp
